Add subsections, vim markers and modeline

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -2,7 +2,7 @@
 
 Обзор он и есть обзор
 
-\section{Основные понятия задачи идентификации динамических систем}
+\section{Основные понятия задачи идентификации динамических систем} % {{{1
 
 Одно из первых определений задачи идентификации было дано
 Л.~Заде~\cite{zadeh_id_1956}.
@@ -13,22 +13,28 @@
 
 Определение Растригина.
 
-\section{Свойства систем хаотической динамики применительно к задаче идентификации}
+
+% }}}1
+
+
+\section{Свойства систем хаотической динамики применительно к задаче идентификации}  % {{{1
 
 Одним из основных свойств систем хаотической динамики является чувствительность
 к малым возмущениям сходных сигналов, состояния системы или же параметров.
 В линейном приближении это соответствует положительным значениям
 коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
 
-Рисунок -- расходящиеся траектории.
 
-\section{Существующие методы идентификации нелинейных динамических систем и их свойства}
+% }}}1
 
-
-
+\section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
 
 
-\section{Постановка задачи идентификации}
+
+% }}}1
+
+
+\section{Постановка задачи идентификации}  % {{{1
 
 Пусть задан динамический объект $ \mathbf{O}$, характеризуемый параметром $p_o(t)$.
 Информация об этом параметре может быть представлена
@@ -50,7 +56,8 @@ $[p_{\min}(t), p_{\max}(t)]$.
 изменения параметра и т.д.
 
 Пусть также существует конечное множество моделей
-$\mathbf{M}_i$. Структура моделей предполагается известной и одинаковой,
+$\mathbf{M}_i$, $i=0 \ldots N-1$.
+Структура моделей предполагается известной и одинаковой,
 а параметру объекта $p_o(t)$ соответствуют параметры моделей $p_{i}(t)$.
 
 На вход как моделей, так и объекта подаётся входной сигнал $u(t)$.
@@ -140,7 +147,11 @@ c) упрощённая форма варианта b) -- ограничение
 
 Борцов~\cite{borcov} -- эле-мех.
 
-\section{Постановка задачи исследования}
+
+% }}}1
+
+
+\section{Постановка задачи исследования}  % {{{1
 
 Критерии.
 
@@ -150,5 +161,14 @@ c) упрощённая форма варианта b) -- ограничение
 
 Проверка адекватности.
 
-\section{Выводы по разделу \thechapter}
 
+% }}}1
+
+
+\section{Выводы по разделу \thechapter}  % {{{1
+
+
+% }}}1
+
+
+% vim: fdm=marker ft=tex
