--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -1,6 +1,6 @@
 \chapter{Критерии идентификации}
 
-\section{Свойства и параметры критериев идентификации}
+\section{Свойства и параметры критериев идентификации} % {{{1
 
 Особенность динамики хаотических систем не позволяет
 определить цель идентификации как задачу минимизации
@@ -9,7 +9,7 @@
 
 \Cmt{TODO: обоснование и картинки}
 
-На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показвающий
+На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показывающий
 различие траекторий для системы Лоренца \Cmt{ref}
 при малом возмущении значений начальных условий.
 
@@ -44,6 +44,78 @@
 которых для объекта и модели (в смысле какой-либо меры)
 и позволяет говорить о достижении цели идентификации.
 
+Для создания возможности использования критерия
+для целей идентификации динамических системы,
+сам критерий должен каким-либо образом отображать
+глобальные свойства системы, а не её состояния в конкретный момент времени,
+то есть не изменяться (по крайней мере существенно),
+если свойства системы, предъявляемые в математичкой модели параметрами,
+не изменяются. В таких случаях имеет смысл использовать
+термин ``интегральные критерии''.
+
+
+
+Существует множество способов определения критериев~[XXX].
+Для достаточно простых систем вид критерия,
+подходящего для задачи идентификации, можно вывести
+определив каким-либо образом исходя из структуры
+математической модели.
+В некоторых случаях случаях вид критерия можно подобрать эмпирически,
+на основании опыта в синтезе систем идентификации для подобных
+систем. Тем не менее, наиболее обоснованным
+является подход, основанный на использовании
+каких-либо физических инвариантов.
+
+Практически в каждом разделе физики существуют
+определённые законы сохранения.
+Прежде всего стоит назвать общеизвестные и всеобщие
+законы сохранения энергии, импульса, момента импульса.
+Также существуют и применяются законы сохранения
+электрического, лептонного и барионного зарядов,
+принцип бесцветности и т.д.
+
+Наиболее общим, и, следовательно, наиболее употребляемым является
+закон сохранения энергии.
+Помимо закона сохранения энергии, существуют области,
+где имеет смысл применять другие, вплоть до синтетических
+законов сохранения, но этот подход
+применяется реже.
+
+Каждый из законов сохранения является инвариантом,
+и может служить для синтеза критерия в какой-либо области
+при определённых условиях.
+Тем не менее, непосредственно применение
+физических законов сохранения не всегда
+удобно и прямолинейно.
+Например, в теории управления системы динамического
+хаоса относят к ``диссипативным'' системам.
+Сам этот термин несколько отличается от аналогичного,
+применяемого в физике.
+Там система считается диссипативной, если она не
+получает энергию извне, а имеющуюся переводит
+в не описываемую рассматриваемым комплексом взаимодействий
+форму, чаще всего в тепло. \Cmt{ref}
+В теории управления
+считается, что система, сохраняя процесс диссипации
+(перевода энергии в неконтролируемую форму),
+получает энергию извне, что и обеспечивает её незатухающую
+динамику. \Cmt{ref}
+Более того, сам вид уже существующих
+математических моделей хаотических систем не позволяет
+явно выделить понятие энергии в чистом виде.
+В таких случаях
+приходится прибегать к полуэмпирическим методам,
+рассматривая доступные переменные состояния системы,
+проводя анализ их влияния и, в результате моделирования,
+выбирая подходящий вид критерия.
+
+
+
+
+
+
+
+
 Физическая измеримость.
 
 Следствием невозможности непосредственного использования выходных
@@ -76,10 +148,10 @@ Electro-magnetic -- $x\cdot y$.
 
 
 
+% }}}1
 
 
-
-\section{Отличие задачи идентификации от задач решения нелинейного уравнения и поиска экстремума}
+\section{Отличие задачи идентификации от задач решения нелинейного уравнения и поиска экстремума} % {{{1
 
 \Cmt{Перенести куда-то}
 
@@ -160,7 +232,12 @@ $q_{ma}$??
 
 Чернавскиий~\cite{chernavskii_syn_info}.
 
-\section{Выводы по разделу \thechapter}
+% }}}1
+
+\section{Выводы по разделу \thechapter}  % {{{1
 
 Выводы.
 
+% }}}1
+
+% vim: fdm=marker ft=tex
