--- a/p4/qontrol.tex
+++ b/p4/qontrol.tex
@@ -1,7 +1,7 @@
 \chapter{Программно-аппаратный комплекс моделирования нелинейных динамических систем ``qontrol''}
 \label{chapter_qontrol}
 
-\section{Анализ существующих систем} % ---------------------------------------------
+\section{Анализ существующих систем} %  % {{{1 ---------------------------------------------
 
 \paragraph{Matlab, simulink}
 
@@ -60,11 +60,17 @@
 
 
 
-\section{Требования к системе моделирования} % ---------------------------------------------
+% }}}1
 
-Созанный ?
+\section{Требования к системе моделирования} %  % {{{1 ---------------------------------------------
 
-\section{Основы построения программно-аппаратного комплекса} % ------------------------------
+Созданный ?
+
+
+% }}}1
+
+
+\section{Основы построения программно-аппаратного комплекса} %  % {{{1 ------------------------------
 
 Для разработки комплекса в качестве базового языка был выбран C++,
 как обеспечивающий совмещение гибкости и возможностей разработки
@@ -79,7 +85,7 @@
 В качестве такого языка был выбран ECMAScript, известный также
 как Javascript.
 
-\subsection{Реализация интроспекции}
+\subsection{Реализация интроспекции}  % {{{2
 
 Для реализации задач гибкого подхода к моделированию, автоматизации
 и автоматического построения интерфейсных элементов
@@ -89,18 +95,36 @@
 Библиотека Qt, используемая в разработке, предоставляет
 базовые возможности интроспекции, за счёт использования метакомпилятора ``moc''.
 
-\subsection{Базовые объекты системы и структурная схема модели}
+% }}}2
+
+
+\subsection{Базовые объекты системы и структурная схема модели}  % {{{2
+
+
+% }}}2
 
 
 
-\section{Пользовательский интерфейс комплекса} % ----------------------------------------
+
+% }}}1
+
+\section{Пользовательский интерфейс комплекса} %  % {{{1 ----------------------------------------
 
 Пользовательский интерфейс программы ``qontrol'' был создан с помощью
 средств, предоставляемых библиотекой Qt.
 
-\section{Основные подходы к } % --------------------------------------------- 
 
-\section{Выводы по разделу \thechapter} % ---------------------------------------------
+% }}}1
+
+\section{Основные подходы к } %  {{{1 --------------------------------------------- 
+
+% }}}1
+
+\section{Выводы по разделу \thechapter} %  % {{{1 ---------------------------------------------
 
 Створено щось непогане.
 
+% }}}1
+
+
+% vim: fdm=marker ft=tex
