--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -1,10 +1,14 @@
 
 \FloatBarrier
-\section{Система Чуа} % _CHUA_
+
+\section{Система Чуа} %  % {{{1 _CHUA_
+\label{atu:sect:chua}
 
 \LinkRef{
  chua: ASAU-18, MKMM-2014, APIR-2011
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _chua_task
 
 Одной из известных хаотических систем, легко реализуемых как модельно (\ref{atu:eq:chua}),
 так и схемотехнически (рис.~\ref{atu:f:chuascheme}),
@@ -133,6 +137,11 @@ $ \mu \in [ 1.29 ; 5.6 ] $.
 \end{figure}
 
 
+% }}}2
+
+\subsection{Анализ критериев}  % {{{2
+
+
 Для определения вида критерия рассмотрим зависимости
 $q_{*}(\mu) $ (индексом ``*'' будем обозначать применение какого-либо из индексов,
 обозначающих исходный сигнал для критерия и способ усреднения),
@@ -189,6 +198,9 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 Из этого графика можно сделать вывод, что первоначальная оценка $a_q$
 была сделана корректно.
 
+% }}}2
+
+
 В качестве системы идентификации использовалась система с 5 поисковыми агентами и
 двумя неподвижными моделями. Для исследования динамических свойств системы идентификации
 параметр $\mu_o$ для объекта задавался двумя способами:
@@ -216,6 +228,12 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 }
 \label{atu:f:chua_id}
 \end{figure}
+
+
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
+
+
 
 Для более точной настройки параметров самой системы идентификации
 рассмотрим зависимости среднеквадратических ошибок идентификации
@@ -261,4 +279,16 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 и, следовательно, допустимо большее время оценивания. Напротив, в случае (\ref{atu:eq:chua_mu_sign})
 увеличение времени оценивания приводит к заметному снижению интегральной точности идентификации.
 
+% }}}2
 
+
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+
+% }}}1
+
+% vim: fdm=marker ft=tex
