--- a/p5/colp_testsys.tex
+++ b/p5/colp_testsys.tex
@@ -1,9 +1,12 @@
 \FloatBarrier
-\section{Генератор Колпитца} % _COLP_
+\section{Генератор Колпитца} %  % {{{1 _COLP_
+\label{atu:sect:colp}
 
 \LinkRef{
   colp: ASAU-21, APIR-2013
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _colp_task
 
 В ряде радиоэлектронных устройств используются
 генераторы сигналов, способные генерировать разнообразные виды  сигналов, в том числе
@@ -233,6 +236,13 @@ $b \in [ 0.02; 4.2 ]$
 с другой -- срывом генерации.
 
 
+% }}}2
+
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
+
+
+
 На рис.~\ref{atu:f:colp_real_xzz}--\ref{atu:f:colp_model_f} предствлены как результаты реального эксперимента,
 так и данные, полученные в результате численного моделирования динамики системы (\ref{atu:eq:colp}).
 Представлены проекции аттракторов на плоскость $(x+z,z)$ (естественный вид для оциллографа),
@@ -389,7 +399,18 @@ $q_{*}(\mu) $, полученные путём моделирования
 \label{atu:f:colp_e_a_q}
 \end{figure}
 
+% }}}2
+
+\subsection{Выводы}  % {{{2
+
 В целом синтез критерия идентификации и построение работоспособной системы идентификации для
 системы генератора Колпитца не потребовало никаких специальных подходов и введения дополнительных
 мер оценивания взаимосвязей параметров генератора.
 
+% }}}2
+
+
+
+% }}}1
+
+% vim: fdm=marker ft=tex
