--- a/p5/deadvi_testsys.tex
+++ b/p5/deadvi_testsys.tex
@@ -1,7 +1,11 @@
 
 \FloatBarrier
 
-\section{Колебательная с зоной нечувствительности в возвращающей силе} % _DEADVI_
+\section{Колебательная с зоной нечувствительности в возвращающей силе} %  % {{{1 _DEADVI_
+\label{atu:sect:deadvi}
+
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _deadvi_task
 
 \LinkRef{
   deadvi: ASAU-20, ISDMCI-2013
@@ -27,7 +31,24 @@ $U_0 = 1.4$, $\omega_{in} = 1.4$, $c_0=0.1$, $a=-0.3$, $b=1.0$.
 \label{atu:f:deadvi_phase}
 \end{figure}
 
+% }}}2
+
+\subsection{Анализ критериев}  % {{{2
+
 Критерий
 $\overline{x^2(t)}$
 
+% }}}2
 
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+
+
+% }}}1
+
+
+% vim: fdm=marker ft=tex
