--- a/p5/duff_testsys.tex
+++ b/p5/duff_testsys.tex
@@ -1,6 +1,8 @@
 
 \FloatBarrier
-\section{Система Дуффинга} % _DUFF_
+
+\section{Система Дуффинга} %  % {{{1 _DUFF_
+\label{atu:sect:duff}
 
 \LinkRef{
  duff: ASAU-12, 15. APIR-2009. DSMP-2016
@@ -8,6 +10,7 @@
   % ~/doc/tex/asau/asau15/atu/atu.tex
 }
 
+\subsection{Определение системы и анализ её динамики} %  % {{{2
 
 Рассмотрим нелинейную динамическую систему Дуффинга~\cite{magni_theory_dyn_chaos}:
 
@@ -46,6 +49,36 @@ $ \beta \approx 2 $.
 \label{atu:f:duff_phase}
 \end{figure}
 
+
+% }}}2
+
+\subsection{Анализ критериев}  % {{{2
+
 Критерий
 $\overline{x^2}$
 
+
+% }}}2
+
+\subsection{Тестовая задача идентификации для системы Дуффинга}  % {{{2
+
+Постановка здесь
+
+% }}}2
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
+
+
+Зависимости здесь
+
+% }}}2
+
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+% }}}1
+
+% vim: fdm=marker ft=tex
