--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -1,10 +1,14 @@
 
 \FloatBarrier
-\section{Система с сухим трением} % __FRIC__
+\section{Система с сухим трением} %  % {{{1  __FRIC__
+\label{atu:sect:fric}
 
 \LinkRef{
   fric: ASAU-11, DSMP-2016
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _fric_task
+
 
 Существуют динамические системы, не обладающие хаотическим поведением,
 которые, тем не менее, проявляют сходные свойства с точки зрения идентификации.
@@ -70,6 +74,10 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 характерными режимами работы систем позиционирования электромеханических
 устройств, для которых и характерно влияние сухого трения.
 
+% }}}2
+
+\subsection{Анализ критериев}  % {{{2
+
 Для обеспечения возможности применения методов идентификации,
 необходимо существование критерия
 \( q(x(t)) \),
@@ -126,6 +134,13 @@ $ f_{df}( x, \dot{x}, \ldots)  $ -- сила сухого трения.
 \label{atu:f:fric_q}
 \end{figure}
 
+% }}}2
+
+
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы }  % {{{2
+
+
 
 Динамика процессов идентификации для системы (\ref{atu:eq:dryfric_sys}) представлена на рис.~\ref{atu:f:fric_id}.
 Следует отметить сильное влияние входного сигнала, В силу того, что когда системы неподвижны
@@ -176,8 +191,19 @@ $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
 \label{atu:f:fric_e_a_q}
 \end{figure}
 
+% }}}2
+
+\subsection{Выводы}  % {{{2
+
 Для данной системы энергетические критерии, аналогичные применённым в предыдущих случаях,
 оказались неприменимы. Критерий, хоть и основанный на измерении производной (после фильтрации),
 оказался работоспособным. В первую очередь это связано с тем, что в основе были положены
 физические принципы, которые для системы с сухим трением, вполне очевидны.
 
+% }}}2
+
+
+
+% }}}1
+
+% vim: fdm=marker ft=tex
