--- a/p5/relax_testsys.tex
+++ b/p5/relax_testsys.tex
@@ -1,7 +1,7 @@
 
 \FloatBarrier
-\section{Релаксационные генераторы}
-
+\section{Релаксационные генераторы}  % {{{1
+\label{atu:sect:relax}
 
 \LinkRef{
   relax: ASAU-18 (no id?)
@@ -13,5 +13,6 @@
 \label{atu:f:relax_phase3}
 \end{figure}
 
+% }}}1
 
-
+% vim: fdm=marker ft=tex
