--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -1,11 +1,14 @@
 
 \FloatBarrier
-\section{Система Рёсслера} % _ROSS_
+\section{Система Рёсслера} %  % {{{1 _ROSS_
+\label{atu:sect:ross}
 
 \LinkRef{
   ross: ASAU-14. ISDMCI-2011, ISDMCI-2012
   % ~/doc/tex/asau/asau14/atu/atu.tex
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _ross_task
 
 In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn}
 
@@ -29,7 +32,7 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 При моделировании данной системы положим
 \(a=0.25\), \(b=1\).
 В этом случае параметр \(c\) определяет
-тип динамики системы. 
+тип динамики системы.
 Определение значения данного параметра и будет
 целью задачи идентификации.
 
@@ -44,12 +47,12 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 
 Как и другие системы хаотической динамики, система Ресслера
 не позволяет построить систему идентификации, основанную
-на формировании критерия качества идентификации 
-как меры близости непосредственных значений выходных сигналов 
+на формировании критерия качества идентификации
+как меры близости непосредственных значений выходных сигналов
 объекта \( x_0(t) \) и модели \( x_m(t) \).
 Более того, сам вид поведения данной системы может значительно изменяться
 при малых изменениях параметров, совершая переход от
-хаотического к сложно - периодическому и обратно.
+хаотического к сложно-периодическому и обратно.
 
 При малых значениях параметра (\(c \approx 2 \))
 система проявляет регулярную динамику,
@@ -71,6 +74,37 @@ $ c \in [2; 50] $, $c_0=5.88$.
 \label{atu:f:ross_phase}
 \end{figure}
 
+% }}}2
+
+\subsection{Анализ критериев}  % {{{2
+
 Критерий
 $ z_{\max}$, $ \overline{z} $.
 
+% }}}2
+
+\subsection{Тестовая задача идентификации для системы Рёсслера}  % {{{2
+
+
+% }}}2
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Рёсслера}  % {{{2
+
+% }}}2
+
+\subsection{Зависимости значений критериев идентификации при изменении двух параметров системы Рёсслера}  % {{{2
+
+% }}}2
+
+
+
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+
+% }}}1
+
+% vim: fdm=marker ft=tex
