--- a/p5/testsys.tex
+++ b/p5/testsys.tex
@@ -24,7 +24,12 @@
 
 \input{vglass_testsys.tex} % p5/vglass_testsys.tex      %
 
-\section{Выводы по разделу \thechapter}
+\section{Выводы по разделу \thechapter}  % {{{1 
 
 Выводы.
 
+
+% }}}1
+
+
+% vim: fdm=marker ft=tex
