--- a/p5/vdp_testsys.tex
+++ b/p5/vdp_testsys.tex
@@ -1,10 +1,13 @@
 
 \FloatBarrier
-\section{Система Ван-дер-Поля} % _VDP_
+\section{Система Ван-дер-Поля} %  % {{{1 _VDP_
+\label{atu:sect:vdp}
 
 \LinkRef{
   vdp: ASAU-16, 17(alt), ITMM-2011
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _vdp_task
 
 \begin{equation}
  \ddot{x} - \varepsilon (1-x^2)  \dot{x} + \Omega_0^2 x  = u(t) .
@@ -27,10 +30,39 @@
 \label{atu:f:vdp_phase}
 \end{figure}
 
+% }}}2
+
+
+\subsection{Анализ критериев}  % {{{2
+
 Критерий:
 $\overline{T}$ + люфт + sign.
 
 Альтернативный критерий:
 $\overline{x^2}$
 
+% }}}2
 
+\subsection{Тестовая задача идентификации для системы Ван-дер-Поля}  % {{{2
+
+% }}}2
+
+
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Ван-дер-Поля}  % {{{2
+
+
+Зависимости здесь
+
+% }}}2
+
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+
+
+% }}}1
+
+% vim: fdm=marker ft=tex
