--- a/p5/vglass_testsys.tex
+++ b/p5/vglass_testsys.tex
@@ -1,13 +1,31 @@
 
 \FloatBarrier
-\section{Колебательная система с гистерезисом в возвращающей силе} % _VGLASS_
+\section{Колебательная система с гистерезисом в возвращающей силе} %  % {{{1 _VGLASS_
+\label{atu:sect:vglass}
 
 \LinkRef{
   vglass: ITMM-2013
 }
+
+\subsection{Определение системы и анализ её динамики} %  % {{{2 _vglass_task
+
+
+
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.5\textwidth]{p/cha/vg1-graph_phase.png} }
 \caption{Фазовый портрет системы ``vglass'' }
 \label{atu:f:vglass_phase}
 \end{figure}
+% }}}2
+
+
+\subsection{Выводы}  % {{{2
+
+Выводы
+
+% }}}2
+
+% }}}1
+
+% vim: fdm=marker ft=tex
