Starting energy representation for criterions.

--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -109,9 +109,101 @@
 проводя анализ их влияния и, в результате моделирования,
 выбирая подходящий вид критерия.
 
+\Cmt{ Слова о том, что ``ы среднем''}
+
+
+Рассмотрим основные способы представления энергии:
+
+Кинетическая энергия тела массой $m$, которое движется со скоростью $v$:
+%
+\begin{equation}
+  E_k = \frac{mv^2}{2} = \frac{m}{2} \left( \od{x}{t} \right)^2.
+  \label{atu:eq:Ek_v}
+\end{equation}
+%
+Следует обратить внимание, что, по сравнению с классическим
+представлением энергии при обработке сигналов,
+здесь присутствует квадратичная зависимость от производной сигнала.
+
+Потенциальная энергия в однородном поле (нулевой уровень выбирается произвольно):
+%
+\begin{equation}
+  E_p = m g x .
+  \label{atu:eq:Ep_g}
+\end{equation}
+
+Потенциальная энергия в упругом приближении:
+%
+\begin{equation}
+  E_p = k \frac{x^2}{2} .
+  \label{atu:eq:Ep_spring}
+\end{equation}
+
+Кинетическая энергия вращающегося тела:
+%
+\begin{equation}
+  E_k = J \frac{\omega^2}{2} = \frac{J}{2} \left( \od{\varphi}{t} \right)^2 .
+  \label{atu:eq:Ek_spin}
+\end{equation}
+
+Внутренняя тепловая энергия:
+%
+\begin{equation}
+  E_t = \frac{im}{2M} RT.
+  \label{atu:eq:Et}
+\end{equation}
+
+Электрическая энергия, накопленная в конденсаторе:
+%
+\begin{equation}
+  E_c = \frac{C U^2}{2}.
+  \label{atu:eq:Ec}
+\end{equation}
+
+Энергия магнитного поля, накопленная в катушке индуктивности:
+%
+\begin{equation}
+  E_l = \frac{L I^2}{2} = \frac{L}{2} \left( \od{Q}{t}\right)^2 .
+  \label{atu:eq:El}
+\end{equation}
+
+Энергия, превращаемая в тепло омическим сопротивлением:
+%
+\begin{equation}
+  E_r = U I = I^2 R = \frac{U^2}{R} = U \od{Q}{t} .
+  \label{atu:eq:Er}
+\end{equation}
 
 
 
+\Cmt{Chemical kinetic -- $\max(x)$}.
+
+\Cmt{Electro-magnetic -- $x\cdot y$}.
+
+
+Обобщая вышеизложенное, можно сделать выводы, что
+несмотря на разнообразие физических процессов, количество способов
+представления энергии (рассматриваем сосредоточенные параметры)
+весьма ограничено. Основные виды зависимостей:
+
+\begin{itemize}
+
+  \item
+    Квадратичная зависимость от координаты: $E \sim x^2$.
+
+  \item
+    Линейная зависимость от координаты: $E \sim x$.
+
+  \item
+    Квадратичная зависимость от производной координаты по времени: $E \sim \left( \od{x}{t}\right)^2$.
+
+  \item
+    Линейная зависимость от произведений координат: $E \sim x \cdot y$.
+
+  \item
+    Линейная зависимость от произведений одной координаты на производную другой: $E \sim x \cdot \od{y}{t}$.
+
+\end{itemize}
 
 
 
@@ -124,21 +216,10 @@
 тот факт, что для получения оценки критерия, как правило,
 требуется значительное время.
 
-Законы сохранения в физике.
-
-Представления величин, связанных с энергией.
-
-Voltage, elastic -- $x^2$.
-
-Potential in uniform field -- $x$ 
-
-Chemical kinetic -- $\max(x)$.
-
-Electro-magnetic -- $x\cdot y$.
 
 
 
-Отношение к интересующим аспектам динамики объекта.
+
 
 Монотонность -- как следствие одноэкстремальность?
 
