--- a/p5/lor_testsys.tex
+++ b/p5/lor_testsys.tex
@@ -518,7 +518,7 @@ $\overline{e}_{ba}=5.46$.
 
 \end{itemize}
 
-Рассмотри процесс идентификации этой же системы, при тех же условиях,
+Рассмотрим процесс идентификации этой же системы, при тех же условиях,
 но семейством методов, основанных на применении функции качества,
 а именно FAlv5.3z.$q_{x^2}$
 
