Restucturized p3. Not final, but better

--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -203,7 +203,27 @@
   \item
     Линейная зависимость от произведений одной координаты на производную другой: $E \sim x \cdot \od{y}{t}$.
 
+  \item
+    Максимум величины на заданном интервале времени.
+
 \end{itemize}
+
+Таким образом, в тех случаях, когда нет возможности
+использовать явный, непосредственно вытекающий
+из строгого анализа системы критерий, в качестве кандидатов
+имеет смысл перебрать возможные комбинации из перечисленных выражений.
+При этом следует учитывать, что, в отличие от строгих законов сохранения
+полученные величины характеризуют систему (или её отдельные элементы)
+в достаточно грубом приближении.
+Ещё одним важным отличием критериев, построенных по такой схеме,
+от строгих законов сохранения является то,
+что законы сохранения выполняются строго в каждый момент
+(с точностью, обеспечиваемой измерениями). Напротив,
+критерии, полученные таким полуэмпирическим путём,
+имеют смысл только после какого-либо усреднения.
+
+
+
 
 
 
