--- a/p2/p2.tex
+++ b/p2/p2.tex
@@ -5,12 +5,11 @@
 Особенность динамики хаотических систем не позволяет
 определить цель идентификации как задачу минимизации
 какой-либо меры $\mu(x_o(t),x_i(t))$ в пространстве выходных
-сигналов~[].
+сигналов~\cite{atu_asau11,atu_asau12,atu_asau14}.
 
-\Cmt{TODO: обоснование и картинки}
 
 На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показывающий
-различие траекторий для системы Лоренца \Cmt{ref}
+различие траекторий для системы Лоренца~\cite{moon_chaotic_vibr}:
 при малом возмущении значений начальных условий.
 
 \begin{figure}[h!]
@@ -19,12 +18,12 @@
     \hfill
     \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_x0.png}
   }
-  \caption{Различине в поведение системы Лоренца при малом возмущении начальных условий}
+  \caption{Различие в поведение системы Лоренца при малом возмущении начальных условий}
   \label{atu:f:lor_diff_x0}
 \end{figure}
 
 
-На рис.~\ref{atu:f:lor_diff_sigma} приведён пример, показвающий
+На рис.~\ref{atu:f:lor_diff_sigma} приведён пример, показывающий
 различие траекторий для системы Лоренца
 при малом возмущении значений параметра $\sigma$.
 
@@ -34,12 +33,22 @@
     \hfill
     \includegraphics[width=0.49\textwidth]{p/lor_diff-p_dx_sigma.png}
   }
-  \caption{Различине в поведение системы Лоренца при малом возмущении параметра $\sigma$}
+  \caption{Различие в поведение системы Лоренца при малом возмущении параметра $\sigma$}
   \label{atu:f:lor_diff_sigma}
 \end{figure}
 
+Эти примеры, демонстрирующие чувствительность фазовых траекторий хаотических систем
+как к пренебрежимо малым изменениям параметров, так и к малым изменениям
+в состоянии системы, подчёркивают тот факт, что близость
+(или даже совпадение, при условии различной истории) параметров модели
+и объекта не обозначает близость фазовых траекторий систем
+в смысле наиболее часто используемых мер функциональных пространств.
+Более того, ввиду плотного заполнения аттракторов таких систем
+можно подобрать достаточно близкие траектории для систем с различными значениями параметров
+на ограниченном интервале времени.
 
-Для целей идентификации необходимо существование
+
+Следовательно, для синтеза системы идентификации необходимо существование
 заданного скалярного критерия $q(x(t))$, близость величин
 которых для объекта и модели (в смысле какой-либо меры)
 и позволяет говорить о достижении цели идентификации.
@@ -55,9 +64,10 @@
 
 
 
-Существует множество способов определения критериев~[XXX].
+Существует множество способов определения
+критериев~\cite{atu_asau11,atu_asau12,atu_asau14,atu_khar_autodor25,atu_asau18,atu_st79,atu_apir2013}.
 Для достаточно простых систем вид критерия,
-подходящего для задачи идентификации, можно вывести
+подходящего для задачи идентификации, можно вывести,
 определив каким-либо образом исходя из структуры
 математической модели.
 В некоторых случаях случаях вид критерия можно подобрать эмпирически,
@@ -72,7 +82,7 @@
 законы сохранения энергии, импульса, момента импульса.
 Также существуют и применяются законы сохранения
 электрического, лептонного и барионного зарядов,
-принцип бесцветности и т.д.
+принцип бесцветности и~т.д.
 
 Наиболее общим, и, следовательно, наиболее употребляемым является
 закон сохранения энергии.
@@ -108,8 +118,6 @@
 рассматривая доступные переменные состояния системы,
 проводя анализ их влияния и, в результате моделирования,
 выбирая подходящий вид критерия.
-
-\Cmt{ Слова о том, что ``ы среднем''}
 
 
 Рассмотрим основные способы представления энергии:
@@ -228,7 +236,7 @@
 
 
 
-Физическая измеримость.
+% Физическая измеримость.
 
 Следствием невозможности непосредственного использования выходных
 сигналов объекта и моделей в качестве критерия идентификации, а также
@@ -241,11 +249,11 @@
 
 
 
-Монотонность -- как следствие одноэкстремальность?
+% Монотонность -- как следствие одноэкстремальность?
 
 
-Зависимость (обозначение?) от времени оценивания.
-Методы измерения.
+%Зависимость (обозначение?) от времени оценивания.
+%Методы измерения.
 
 
 
@@ -254,7 +262,7 @@
 
 \section{Отличие задачи идентификации от задач решения нелинейного уравнения и поиска экстремума} % {{{1
 
-\Cmt{Перенести куда-то}
+% \Cmt{Перенести куда-то}
 
 На первый взгляд, при заданном критерии идентификации, задача идентификации
 сводится к классической задаче решения нелинейного уравнения: надо найти такие значения
@@ -299,7 +307,7 @@ $q_m$ принимает значение, наиболее близкое к з
 более чувствителен к шумам измерения, чем собственно измерение.
 
 
-\Cmt{ TODO: Требование конечности производных в условиях дискретного представления сигнала.}
+% \Cmt{ TODO: Требование конечности производных в условиях дискретного представления сигнала.}
 
 Все эти явления делают задачу идентификации более сложной, чем
 исходные задачи, чем и обусловлено
@@ -307,7 +315,7 @@ $q_m$ принимает значение, наиболее близкое к з
 некоторые алгоритмы, применимые при поиска экстремума, могут быть
 полезны при синтезе системы идентификации.
 
-Свёртка с чем-то.
+% Свёртка с чем-то.
 
 Как уже было отмечено, для успешности процесса идентификации требуется
 построение различных интегральных критериев, зависящих,
