--- a/atudiss.tex
+++ b/atudiss.tex
@@ -9,21 +9,10 @@
 
 \input{tikzsetup.tex}
 
+\input{defs.tex}
+
 %\setstretch{1.2}
 
-\newcommand{\bookname}{Моделі та  методи адаптивно-пошукової ідентифікації систем з хаотичною динамікою}
-\newcommand{\bookyear}{2016}
-\newcommand{\dissauthor}{Гуда~А.И.}
-\renewcommand{\Rada}{Д.~08.084.01}
-\renewcommand{\SekrRadi}{Селівьорстова~Т.В.}
-
-\title{\bookname}
-\author{Гуда Антон Игоревич}
-\supervisor{Михалёв Александр Ильич}{д.т.н., проф.}
-\speciality[математичне моделювання та обчислювальні методи]{01.05.02}[технических наук]
-\udc{681.5.015}
-\date{\bookyear}
-\institution{Национальная металлургическая академия Украины, Министерство образования и науки Украины}{Днепропетровск}
 
 %\author{\dissauthor}
 
