--- a/atuworks.bib
+++ b/atuworks.bib
@@ -20,16 +20,16 @@
   publisher = {ХНТУ},
 }
 
-@Article{atu_asau3,
-  title = {Сравнительный анализ алгоритмов поисковой идентификации нелинейных систем},
-  author = atum,
-  xdata = {asau},
-  language     = {russian},
-  langid       = {russian},
-  year = {2000},
-  pages = {99--108},
-  number = {3(23)}
-}
+%@Article{atu_asau3,
+%  title = {Сравнительный анализ алгоритмов поисковой идентификации нелинейных систем},
+%  author = atum,
+%  xdata = {asau},
+%  language     = {russian},
+%  langid       = {russian},
+%  year = {2000},
+%  pages = {99--108},
+%  number = {3(23)}
+%}
 
 @Article{atu_asau10,
   title = {Информационные оценки сложности задачи параметрической идентификации динамических систем},
@@ -521,6 +521,20 @@
   pages = {53--54}
 }
 
+
+
+@Article{atu_ric2016,
+  title = {Multi-models identification methods comparison in the non-linear dynamic system identification task},
+  author = atume,
+  journal = {Радиоэлектроника, информатика, управление},
+  location = {Запоріжжя, ЗНТУ},
+  language     = {english},
+  langid       = {english},
+  year = {2016},
+  number = {4},
+  doi = {10.15588/1607-3274-2016-4-14},
+  pages = {112--119}
+}
 
 
 
