More defs, use in aref.

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -325,14 +325,16 @@ XXX
 
 \xsect{АННОТАЦИЯ}
 
-\textbf{Гуда~А.И.}
-\textbf{Моделирование процессов адаптивно-поисковой идентификации нелинейных динамических систем.}
+\textbf{\dissauthorRu}
+\textbf{\booknameRu}
 \textbf{--- На правах рукописи.}
 
-Диссертация на соискание ученой степени доктора технических
-наук по специальности 01.05.02
-<<Математическое моделирование и вычислительные методы>>.
-Национальная металлургическая академия Украины Министерства образования и науки, Днипро, 2017.
+Диссертация на соискание ученой степени
+доктора
+\dissScopeRu\ {}
+по специальности
+\dissSpecId\ --- <<\dissSpecRu>>.
+\institutionRu, \belongRu, \cityRu, \bookyear.
 
 
 Ключевые слова:
@@ -342,15 +344,16 @@ XXX
 
 \xsect{АНОТАЦІЯ}
 
-\textbf{Гуда~А.І.}
-\textbf{Моделювання процесів адаптивно-пошукової ідентифікації нелінійних динамічних систем.}
+\textbf{\dissauthorUa}
+\textbf{\booknameUa}
 \textbf{--- На правах рукопису.}
 
-Дисертація на здобуття наукового ступеня доктора технічних наук
-за спеціальністю 01.05.02 --
-<<Математичне моделювання і обчислювальні методи>>.
-Національна металургійна академія України
-Міністерства освіти і науки України, Дніпро, 2017.
+Дисертація на здобуття наукового ступеня
+доктора
+\dissScopeUa\ {}
+за спеціальністю
+\dissSpecId\ --- <<\dissSpecUa>>.
+\institutionUa, \belongUa, \cityUa, \bookyear.
 
 
 Ключові слова: адаптивно-пошукова ідентифікація, нелінійні динамічні
@@ -360,13 +363,13 @@ XXX
 
 \xsect{ABSTRACT}
 
-\textbf{Guda~A.I.}
-\textbf{Modelling of nonlinear dynamic systems adaptive-search identification processes}.
+\textbf{\dissauthorEn}
+\textbf{\booknameEn}.
 \textbf{--- As Manuscript.}
 
-Thesis for the degree of Doctor of Technical Science in Specialization 01.05.02 –-
-<<Mathematical Modelling and Computational Methods>>.
-National metallurgical academy of Ukraine  of the Ministry of Education and Science if Ukraine, Dnipro, 2017.
+Thesis for the degree of Doctor of Technical Science in Specialization
+\dissSpecId\ --- <<\dissSpecEn>>.
+\institutionEn, \belongEn, \cityEn, \bookyear.
 
 The dissertation is devoted to
 
@@ -381,7 +384,7 @@ information estimations, mathematical model.
 \begin{center}
 
 
-Підписано до друку xx.xx.2017~р.
+Підписано до друку xx.xx.\bookyear~р.
 
 Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2
 
