--- a/defs.tex
+++ b/defs.tex
@@ -7,9 +7,11 @@
 \newcommand{\bookyear}{2017}
 \newcommand{\dissauthorUa}{Гуда~А.І.}
 \newcommand{\dissauthorRu}{Гуда~А.И.}
+\newcommand{\dissauthorEn}{Guda~A.I.}
 \newcommand{\dissauthor}{\dissauthorRu}
 \newcommand{\dissSpecUa}{математичне    моделювання  та обчислювальні методи}
 \newcommand{\dissSpecRu}{математическое моделирование и вычислительные методы}
+\newcommand{\dissSpecEn}{Mathematical Modelling and Computational Methods}
 \newcommand{\dissSpecMain}{\dissSpecRu}
 \newcommand{\dissSpecAref}{\dissSpecUa}
 \newcommand{\dissSpecId}{01.05.02}
@@ -23,14 +25,17 @@
 \renewcommand{\SekrRadi}{Селівьорстова~Т.В.}
 \newcommand{\institutionRu}{Национальная металлургическая академия Украины}
 \newcommand{\institutionUa}{Національна  металургійна     академія України}
+\newcommand{\institutionEn}{National Metallurgical academy of Ukraine}
 \newcommand{\institutionMain}{\institutionRu}
 \newcommand{\institutionAref}{\institutionUa}
 \newcommand{\belongRu}{Министерство образования и науки Украины}
 \newcommand{\belongUa}{Міністерство освіти і науки      України}
+\newcommand{\belongEn}{Ministry of Education and Science of Ukraine}
 \newcommand{\belongMain}{\belongRu}
 \newcommand{\belongAref}{\belongUa}
 \newcommand{\cityRu}{Днипро}
 \newcommand{\cityUa}{Дніпро}
+\newcommand{\cityEn}{Dnipro}
 \newcommand{\cityMain}{\cityRu}
 \newcommand{\cityAref}{\cityUa}
 \newcommand{\superRu}{Михалёв Александр Ильич}
